# wiki-doc-generator

./: .gitignore  README.md  index.html  pyproject.toml  wiki_gen.py
.github/workflows/: deploy.yml
docs/: index.html
